fix flickity gap

--- a/src/scss/common/_global.scss
+++ b/src/scss/common/_global.scss
@@ -1,6 +1,6 @@
 
 html {
-    font-size: 16px;   
+    font-size: 16px;
 }
 
 * {
@@ -32,6 +32,11 @@ body {
     max-width: 100%;
     background-color: $white;
     color: $black;
+}
+
+body.home {
+    
+    overflow-y: hidden;  
 }
 
 p {
