--- a/src/scss/components/_flickity.scss
+++ b/src/scss/components/_flickity.scss
@@ -12,6 +12,7 @@ https://flickity.metafizzy.co
   overflow: hidden;
   position: relative;
   height: 100%;
+  overflow-y: hidden;
 }
 
 .flickity-slider {
@@ -150,8 +151,9 @@ https://flickity.metafizzy.co
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover; 
-  width: 100vw; 
-  height: 100vh;
+  width: 100%; 
+  height: 100%;
+  margin-right: 0;
 }
 
 .carousel-cell a {
